--- a/style.css
+++ b/style.css
@@ -1,4 +1,63 @@
 html, body {
   margin: 0;
   padding: 0;
+  height: 100%;
+}
+h1 {
+  margin-left: 2rem;
+}
+form {
+  margin: 0 auto; /* centers the form horizontally */
+  display: flex;
+  align-items: center;
+  justify-content:center;
+  gap: 1rem;
+}
+
+input[type="color"] {
+  border: none;
+  height: 2.5rem;
+}
+
+select {
+  padding: 0.4em;
+  border-radius: 0.25rem;
+  font-size: medium;
+}
+
+/* button style */
+button {
+  cursor: pointer;
+  background-color: white;
+  padding: 0.375rem 0.75rem;
+  font-size: medium;
+  border-radius: 0.5rem;
+}
+
+button:hover{
+  background-color: black;
+  color: white;
+}
+
+/* Color Display Style */
+section {
+  display: flex;
+  height: 100vh;
+}
+
+.individual-color {
+  position: relative;
+}
+
+.individual-color img {
+  width: 100%;
+  height: 100%;
+}
+
+.individual-color p {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: x-large;
 }
