--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@ html, body {
   padding: 0;
   height: 100%;
 }
+
+html, body, select, button {
+  font-family: 'Inter', sans-serif;
+}
+
 h1 {
   margin-left: 2rem;
 }
@@ -43,6 +48,7 @@ button:hover{
 section {
   display: flex;
   height: 100vh;
+  margin-top: 1.5rem;
 }
 
 .individual-color {
